# ffs

./: .gitignore  CMakeLists.txt  LICENSE  README.md
example/: CMakeLists.txt  basic.cpp
include/: ffs.h  ffs_avx_impl.h  ffs_generic_impl.h
test/: CMakeLists.txt  avx_impl.cpp  basic.cpp
